# artemiscpp

./: .gitignore  CMakeLists.txt  README  README.md
include/: component.hpp  component_mapper.hpp  delayed_entity_processing_system.hpp  delayed_entity_system.hpp  entity.hpp  entity_manager.hpp  entity_processing_system.hpp  entity_system.hpp  group_manager.hpp  interval_entity_processing_system.hpp  interval_entity_system.hpp  manager.hpp  system_bit_manager.hpp  system_manager.hpp  tag_manager.hpp  world.hpp
include/artemis/: component.hpp  component_mapper.hpp  delayed_entity_processing_system.hpp  delayed_entity_system.hpp  entity.hpp  entity_handle.hpp  entity_manager.hpp  entity_processing_system.hpp  entity_system.hpp  group_manager.hpp  interval_entity_processing_system.hpp  interval_entity_system.hpp  manager.hpp  system_manager.hpp  tag_manager.hpp  world.hpp
include/artemis/pointers/: entity.hpp  manager.hpp
include/pointers/: component.hpp
include/util/: bag.hpp  immutable_bag.hpp  pointers.hpp  timer.hpp  typedefs.hpp
src/: CMakeLists.txt  component.cpp  component.h  component_mapper.cpp  component_mapper.hpp  component_type_manager.cpp  delayed_entity_processing_system.cpp  delayed_entity_processing_system.hpp  delayed_entity_system.cpp  delayed_entity_system.hpp  entity.cpp  entity.hpp  entity_manager.cpp  entity_manager.hpp  entity_processing_system.cpp  entity_processing_system.hpp  entity_system.cpp  entity_system.hpp  group_manager.cpp  interval_entity_processing_system.cpp  interval_entity_system.cpp  manager.cpp  system_bit_manager.cpp  system_manager.cpp  tag_manager.cpp  world.cpp
src/rid/: component_mapper.cpp  component_mapper.hpp  component_type_manager.hpp
src/util/: bag.cpp  bag.hpp  immutable_bag.hpp  timer.cpp  timer.hpp  typedefs.hpp
